# hoapp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: mypy_pytest.yml
examples/: empty.hoa
hoapp/: __init__.py  ast.py  cli.py  hoapp.lark  parser.py  strings.py  transform.py  util.py
hoapp/ast/: acceptance.py  ast.py  automata.py  expressions.py
tests/: test_expressions.py  test_terminals.py
