[project]
name = "hoapp"
version = "0.2.0"
description = "Add your description here"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.2.2",
    "pyvmt>=0.0.4",
    "typer>=0.16.0",
    "z3-solver>=4.15.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.138.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]

[tool.uv.sources]
pyvmt = { path = "vendor/pyvmt-0.0.4-py3-none-any.whl" }

[project.scripts]
hoapp = "hoapp.cli:main"
